Fix ancho botones collapse

--- a/css/style.css
+++ b/css/style.css
@@ -318,7 +318,9 @@ li.disabled {
 }
 .navbar-white .navbar-collapse ul li a {
     color: #54C4C3;
-    font-weight: 500
+    font-weight: 500;
+	width: 90%;
+    margin: 0 auto;
 }
 .navbar-white .navbar-collapse ul li {
     font-weight: 500
